src/objects/Leave_Detail__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Leave Details</relationshipLabel>
        <relationshipName>Leave_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Leave Detail</label>
    <nameField>
        <displayFormat>LD{0000000}</displayFormat>
        <label>Leave Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>